# tdd-python

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/: CODEOWNERS.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  test.yml
app/: sample.py
app/tasks/: task.py
docs/: blog.md  package.md  pytest罠.md  テストの種類.md
docs/books/software-test-design/: README.md
docs/books/software-test-design/docs/: reading-note.md
docs/books/software-test-design/docs/basic-software-test/: ソフトウェアのテスト技法.md
docs/logging/: entry.md  logging.md
docs/others/: PyConJP2020.md
docs/playground/: ex_namedtuple.py  logger-study.py
docs/playground/pytest/: test_three.py
docs/playground/unittest/basic/: test_string_wrong.py
docs/unittest/: POSTED_unittest.md  unittest-assert.md  unittest-subtest.md
docs/unittest/src/assert/: test_assert.py
docs/unittest/src/basic/: test_string.py
src/tasks/: __init__.py  task.py
tests/: test_models.py  test_tmp.py
tests/tasks/: test_task.py
