[tool.poetry]
name = "study-test"
version = "0.1.0"
description = ""
authors = ["nukopy <pytwbf201830@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
ipython = "^7.14.0"
pytest = "^5.4.2"
pytest-flake8 = "^1.0.6"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
