[tool.poetry]
name = "tasks"
version = "0.1.0"
description = ""
authors = ["nukopy <pytwbf201830@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
ipython = "^7.14.0"
pytest = "^5.4.2"
pytest-flake8 = "^1.0.6"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
